radarr/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
spec:
  selector:
    matchLabels:
      app: radarr 
  serviceName: radarr
  template:
    metadata:
      labels:
        app: radarr 
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr
        ports:
        - containerPort: 7878
          name: web
        volumeMounts:
        - name: radarr
          mountPath: /config
        - name: nfs-medias
          mountPath: /data
        resources:
          requests:
            memory: 100Mi
            cpu: 50m
          limits:
            memory: 500Mi
  volumeClaimTemplates:
  - metadata:
      name: radarr
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1.5Gi
  - metadata:
      name: nfs-medias
    spec:
      accessModes: [ "ReadWriteMany" ]
      storageClassName: nfs-medias
      resources:
        requests:
          storage: 1Gi
