radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 7878
      name: http
