radarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: radarr
spec:
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:5LxWWlrCoDFGDcZfsNwKKTfJIkpUV2SoK5Y=,iv:Fb2DPoPZkcaTou0eqhWW2cGN90NZZmKHG9eJ1/CmSDs=,tag:VFs/N/ndozcwRBjPYx7s2g==,type:str]
          middlewares: []
          services:
            - kind: Service
              name: radarr
              port: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-09-11T05:34:05Z"
    mac: ENC[AES256_GCM,data:y1qvd3Q/1EFw5e0YqZqQJBUO1c8a4KPWBtMPi1qtfkUWUaV96sf2tekM0w4reBlIn7BE9BoJ+tQNNxHdmjI7m58Rk/5ONK1lBBWM7EExiyS32brYp7RkVNRFByVyqPbqqyZJBEG9OALVkUy2vSJH2MEbWQlEC1pAF6qnGvHP+f4=,iv:+hgFwJtl+zeRj24ZLrESpogdQBEpjt47NBvUjRHrT/E=,tag:BQctqRxO6gqLsQyaYDqD4w==,type:str]
    pgp:
        - created_at: "2023-09-11T05:34:05Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAyyGYy7YCFAQAQ//WNMcBbDpootC4qKtbp/cP49kCThhqXyn2neJBtyHbc9n
[...]
            /CT8hvk31VQm
            =8O/D
            -----END PGP MESSAGE-----
          fp: 75C3F62D6A9AA2165875F5C680A364E41D3C47AF
    encrypted_regex: ^(match)$
    version: 3.7.3
